tests/unused_promise/unused_promise.exp
Error ----------------------------------------------------------------------------------------------------- test.js:12:5

`Promise` in async scope is unused. Did you mean to `await` it? [unused-promise-in-async-scope]

   12|     foo(); // error
           ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:14:5

`Promise` in async scope is unused. Did you mean to `await` it? [unused-promise-in-async-scope]

   14|     bar(); // error
           ^^^^^^



Found 2 errors
